[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cold-chain-openenv"
version = "1.0.0"
description = "Cold-chain vaccine distribution OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.30.6",
  "pydantic==2.11.3",
  "openenv-core>=0.2.0",
  "openai>=2.7.2",
  "requests==2.32.3",
  "pyyaml==6.0.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "environment", "inference", "models", "tasks", "validator"]

[tool.setuptools.packages.find]
include = ["server*"]
